--- a/css/styles.css
+++ b/css/styles.css
@@ -17,18 +17,28 @@ img {
 }
 
 header {
-  background: #3e148b;
-  min-height: 100px;
+  background-image: url(/images/header.jpg);
+  background-repeat: no-repeat;
+  min-height: 120px;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 body {
   font-family: "Courier Prime", Verdana, sans-serif;
-  background-color: rgb(172, 172, 172);
-  max-width: 600px;
+  background-color: rgb(51, 50, 52);
+  max-width: 100%;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
+}
+
+main {
+}
+
+img {
+  max-width: 300px;
+  float: left;
+  margin-right: 15px;
 }
 
 h1 {
@@ -73,6 +83,10 @@ nav ul {
   color: #ffffff;
 }
 
+.form__input {
+  display: block;
+}
+
 section::before {
   content: "";
   display: block;
@@ -97,4 +111,9 @@ footer::after {
   content: "/";
   font-size: 20px;
   font-weight: bold;
+}
+
+input[type="text"] {
+  padding: 10px;
+  width: 10%;
 }
